Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /dto/phaedra2-curvedataservice-dto.iml
 /client/phaedra2-curvedataservice-client.iml
 /.idea/
+/server/phaedra2-curvedataservice-server.iml
