--- a/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
@@ -1,5 +1,11 @@
 databaseChangeLog:
   - changeSet:
+      id: 0
+      author: sberberovic
+      changes:
+        - sql:
+            sql: CREATE SCHEMA IF NOT EXISTS curvedata;
+  - changeSet:
       id: 1
       author: sberberovic
       preConditions:
