Disable liquibase in application.yaml

--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -9,6 +9,8 @@ spring:
       enabled: false
   application:
     name: phaedra-curvedata-service
+  liquibase:
+    enabled: false
   security:
     oauth2:
       resourceserver:
