--- a/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
@@ -70,3 +70,15 @@ databaseChangeLog:
                 type: float4[]
                 constraints:
                   nullable: true
+  - changeSet:
+      id: 3
+      author: sberberovic
+      changes:
+        - addColumn:
+            tableName: curve
+            columns:
+              - column:
+                  name: plate_id
+                  type: bigint
+                  constraints:
+                    nullable: false
