--- a/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
@@ -82,3 +82,20 @@ databaseChangeLog:
                   type: bigint
                   constraints:
                     nullable: false
+  - changeSet:
+      id: 4
+      author: sberberovic
+      changes:
+        - addColumn:
+            tableName: curve
+            columns:
+              - column:
+                  name: result_set_id
+                  type: bigint
+                  constraints:
+                    nullable: false
+              - column:
+                  name: protocol_id
+                  type: bigint
+                  constraints:
+                    nullable: false
