Add well and feature value arrays to curve

--- a/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
@@ -111,5 +111,22 @@ databaseChangeLog:
       changes:
         - sql:
             sql: GRANT ALL ON ALL TABLES IN SCHEMA "curvedata" TO phaedra2;
+  - changeSet:
+      id: 7
+      author: sberberovic
+      changes:
+        - addColumn:
+            tableName: curve
+            columns:
+              - column:
+                  name: wells
+                  type: bigint[]
+                  constraints:
+                    nullable: true
+              - column:
+                  name: feature_values
+                  type: float4[]
+                  constraints:
+                    nullable: true
 
 
