Add well concentrations to curve

--- a/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
@@ -128,5 +128,17 @@ databaseChangeLog:
                   type: float4[]
                   constraints:
                     nullable: true
+  - changeSet:
+      id: 8
+      author: sberberovic
+      changes:
+        - addColumn:
+            tableName: curve
+            columns:
+              - column:
+                  name: well_concentrations
+                  type: float4[]
+                  constraints:
+                    nullable: true
 
 
