Fix mapping bug and add some unit tests

--- a/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.0.yaml
@@ -105,12 +105,12 @@ databaseChangeLog:
       changes:
         - sql:
             sql: ALTER TABLE curve ALTER COLUMN version TYPE VARCHAR;
-  - changeSet:
-      id: 6
-      author: sberberovic
-      changes:
-        - sql:
-            sql: GRANT ALL ON ALL TABLES IN SCHEMA "curvedata" TO phaedra2;
+#  - changeSet:
+#      id: 6
+#      author: sberberovic
+#      changes:
+#        - sql:
+#            sql: GRANT ALL ON ALL TABLES IN SCHEMA "curvedata" TO phaedra2;
   - changeSet:
       id: 7
       author: sberberovic
