--- a/server/pom.xml
+++ b/server/pom.xml
@@ -44,10 +44,12 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
+            <version>3.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>3.0.2</version>
         </dependency>
 
         <!-- Development and Test tools -->
