--- a/kubernetesPod.yaml
+++ b/kubernetesPod.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: phaedra2-curvedataservice
+  name: phaedra2-builder
   labels:
-    ci: phaedra2-curvedataservice-build
+    ci: phaedra2-builder
 spec:
   containers:
    - name: builder
