Workaround for testcontainers to use registry.oa.eu

--- a/server/src/test/resources/testcontainers.properties
+++ b/server/src/test/resources/testcontainers.properties
@@ -1,1 +1,1 @@
-hub.image.name.prefix=registry.openanalytics.eu/proxy/library/
+image.substitutor=eu.openanalytics.phaedra.curvedataservice.support.RegistryImageNameSubstitutor
