--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -16,6 +16,9 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: http://localhost
+  graphql:
+    graphiql:
+      enabled: true
   jackson:
     serialization:
       indent_output: true
