fix: clean up code and fix failed tests

--- a/server/src/main/resources/db/changelog/db.changelog-1.1.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.1.yaml
@@ -36,7 +36,7 @@ databaseChangeLog:
                     nullable: true
         - addForeignKeyConstraint:
             constraintName: curve_id_fkey
-            baseTableName: curve_properties
+            baseTableName: curve_property
             baseColumnNames: curve_id
             referencedTableName: curve
             referencedColumnNames: id
