--- a/server/src/main/resources/db/changelog/db.changelog-1.1.yaml
+++ b/server/src/main/resources/db/changelog/db.changelog-1.1.yaml
@@ -26,7 +26,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: property_numeric_value
-                  type: float4[]
+                  type: float4
                   constraints:
                     nullable: true
               - column:
@@ -44,7 +44,7 @@ databaseChangeLog:
             validate: true
         # TODO: enable this when the refactoring is finished
         #  - changeSet:
-        #      id: 2
+        #      id: 3
         #      author: sberberovic
         #      changes:
         #        - sql:
