--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>phaedra2-curvedataservice</artifactId>
     <name>phaedra2-curvedataservice</name>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
 
     <modules>
         <module>dto/</module>
