--- a/dto/pom.xml
+++ b/dto/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>eu.openanalytics.phaedra</groupId>
         <artifactId>phaedra2-curvedataservice</artifactId>
-        <version>2.0.4-SNAPSHOT</version>
+        <version>2.0.4</version>
     </parent>
 
     <artifactId>phaedra2-curvedataservice-dto</artifactId>
