--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>eu.openanalytics.phaedra</groupId>
     <artifactId>phaedra2-curvedataservice</artifactId>
-    <version>2.0.6-SNAPSHOT</version>
+    <version>2.0.6</version>
   </parent>
 
   <artifactId>phaedra2-curvedataservice-server</artifactId>
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>eu.openanalytics.phaedra</groupId>
       <artifactId>phaedra2-curvedataservice-dto</artifactId>
-      <version>2.0.6-SNAPSHOT</version>
+      <version>2.0.6</version>
     </dependency>
 
     <!-- Spring Cloud dependencies -->
