--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>eu.openanalytics.phaedra</groupId>
     <artifactId>phaedra2-curvedataservice</artifactId>
-    <version>2.1.0</version>
+    <version>2.2.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>phaedra2-curvedataservice-server</artifactId>
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>eu.openanalytics.phaedra</groupId>
       <artifactId>phaedra2-curvedataservice-dto</artifactId>
-      <version>2.1.0</version>
+      <version>2.2.0-SNAPSHOT</version>
     </dependency>
 
     <!-- Spring Cloud dependencies -->
