--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>phaedra2-curvedataservice</artifactId>
     <name>phaedra2-curvedataservice</name>
-    <version>2.3.0</version>
+    <version>2.4.0-SNAPSHOT</version>
 
     <modules>
         <module>dto/</module>
